refactor: simplify algorithm implementations